Add README.md file to explain the project

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.waveapps</groupId>
 	<artifactId>payroll</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>payroll</name>
 	<description>Beckend of payroll system</description>
 	<properties>
